[gd_scene load_steps=5 format=3 uid="uid://bbnfor0ukd3y1"]

[ext_resource type="Script" uid="uid://bdpa6aeqxgxup" path="res://UI/GameUI.gd" id="1_ltpa0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwtm8"]
bg_color = Color(0.66574, 0, 0.162233, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqqrp"]
bg_color = Color(0, 0.721945, 0.2945, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgedd"]
bg_color = Color(0.774243, 0, 0.261034, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ltpa0")

[node name="PlayerHPBar" type="ProgressBar" parent="."]
offset_left = 24.0
offset_top = 15.0
offset_right = 202.0
offset_bottom = 38.0
theme_override_styles/background = SubResource("StyleBoxFlat_lwtm8")
show_percentage = false

[node name="PlayerStaminaBar" type="ProgressBar" parent="."]
offset_left = 24.0
offset_top = 38.0
offset_right = 202.0
offset_bottom = 61.0
theme_override_styles/background = SubResource("StyleBoxFlat_hqqrp")
show_percentage = false

[node name="BossHPBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -378.0
offset_top = -66.0
offset_right = 378.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_dgedd")
show_percentage = false
